syntax = "proto3";

option go_package = "./pb";
package pb;

message StatusResponse{
  bool status = 1;
}

message Report{
  string id = 1;
  string pid = 2;
  string sid = 3;
  string reason = 4;
}

message SendReportRequest{
  Report r = 1;
}

message GetTheReportRequest{
  Report r = 1;
  int32 method = 2;
}

message GetTheReportResponse{
  repeated Report r = 1;
}

message GetReportsRequest{
  string ok = 1;
}

message GetReportsResponse{
  repeated Report reports = 1;
}

message SetReportRequest{
  Report r = 1;
  bool status = 2;
}

service Eva_report{
  rpc SendReport(SendReportRequest) returns (StatusResponse);
  rpc GetReports(GetReportsRequest) returns (GetReportsResponse);
  rpc GetTheReport(GetTheReportRequest) returns (GetTheReportResponse);
  rpc SetReport(SetReportRequest) returns (StatusResponse);
}
